@@ -22,6 +22,7 @@ typedef struct output output;
 /** prototypes **/
 int cmd_run (const char *, output *, output *, int);
 int cmd_run_array (char *const *, output *, output *, int);
+int cmd_file_read (char *, output *, int);
 
 /* only multi-threaded plugins need to bother with this */
 void cmd_init (void);
