@@ -6,6 +6,7 @@ This file documents the major additions and syntax changes between releases.
 	Updated Nagios::Plugin to 0.27
 	Fix Debian bug #479013: check_dig's -l is mandatory now (sf.net #1986306)
 	check_dig now returns CRITICAL instead of WARNING when no answer section is found
+	check_procs now captures stderr in external command and adds to plugin output
 
 1.4.12 27th May 2008
 	Added ./check_nt -v INSTANCES to count number of instances (Alessandro Ren)
